fix(responsive text): Remove class to align the text from the div and move it specifically to the H1 style

--- a/src/styles/_custom_bootstrap.scss
+++ b/src/styles/_custom_bootstrap.scss
@@ -153,6 +153,7 @@ nav.primary {
   font-weight: lighter;
   width: 85%;
   margin: 0 auto;
+  text-align: center;
 }
 
 .info-vertical p {
